--- a/ViewDesign/BookmarkManager.html
+++ b/ViewDesign/BookmarkManager.html
@@ -8,10 +8,10 @@
     <h1 id="PageHeader" style="font-family: Arial, sans-serif; font-size: 28px; padding: 20px; display: inline-block">Heading Not Found</h1>
     &ensp;     &ensp;     &ensp;
     <button id="AddBookmark" style="font-size: 18px; margin-left: 10px;" onclick="document.location='./BookMarkAddForm.html'">Add Bookmark</button>
-    <h3 id="categoryTitle" style="text-align: left; font-weight: bold;">Cat</h3>
+    <h3 id="categoryTitle" style="text-align: left; font-weight: bold;">No Bookmarks</h3>
     
     <div style="text-align: left; background-color: whitesmoke; width: 25%; box-shadow: 0px 0px 10px #9A2107;">
-        &ensp;<label style="font-weight: bold;" id="BookMarkTitle">dehan</label>
+        &ensp;<label style="font-weight: bold;" id="BookMarkTitle"></label>
         &ensp; &ensp; &ensp; &ensp; &ensp; &ensp; &ensp; &ensp; &ensp; &ensp; &ensp; &ensp; &ensp;&ensp;
         <button onclick="viewDetails()" style="background-color: #007bff; color: #ffffff; padding: 5px 10px; border: none; border-radius: 3px; font-weight: bold;">Details</button>
     </div>
